added closest() method and proper tests, and fixed some typos in jsdocs

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -21,3 +21,9 @@
     <div></div>
     <input type="checkbox" />
 </div>
+
+<div id="div-01">
+    <div id="div-02">
+        <div id="div-03"></div>
+    </div>
+</div>
