--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <script src="/dist/jbit.js"></script>
         <script>
-            var $cool = B('#cool')
+            var $cool = $('#cool')
               , $squares = $cool.find('.square')
               , $selected = $squares.filter('.select-me')
 
